--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,26 @@
 [server]
 maxUploadSize = 2000
+port = 8501
+address = "0.0.0.0"
+enableXsrfProtection = false
+enableCORS = false
+headless = true
+runOnSave = true
+
+[browser]
+serverAddress = "0.0.0.0"
+serverPort = 8501
+gatherUsageStats = false
 
 [theme]
 primaryColor = "#F63366"
 backgroundColor = "#FFFFFF"
 secondaryBackgroundColor = "#F0F2F6"
 textColor = "#262730"
+
+[deprecation]
+showfileUploaderEncoding = false
+
+[global]
+developmentMode = false
+disableWatchdogWarning = true
