--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,15 +1,25 @@
 [server]
-maxUploadSize = 2000
+maxUploadSize = 5000  # Increased for larger files
 port = 8501
 address = "0.0.0.0"
 enableCORS = true
 headless = true
 runOnSave = true
+enableXsrfProtection = false  # Added for better compatibility
+maxMessageSize = 1000  # Added for handling large data transfers
+
 [browser]
 serverAddress = "0.0.0.0"
 serverPort = 8501
+gatherUsageStats = false  # Added for privacy
+
 [theme]
 primaryColor = "#F63366"
 backgroundColor = "#FFFFFF"
 secondaryBackgroundColor = "#F0F2F6"
 textColor = "#262730"
+font = "sans serif"  # Added for consistent typography
+
+[logger]
+level = "INFO"  # Added for better debugging
+messageFormat = "%(asctime)s %(message)s"
